<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginHorizontal="22dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/gray_F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_poster_list_item"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:src="@color/gray"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title Yoooooooo"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>